--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
             <version>5.4.31.Final</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.jetbrains</groupId>-->
-<!--            <artifactId>annotations</artifactId>-->
-<!--            <version>RELEASE</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
