--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>2.8.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
